media/boom/css/boom/dialog.less
.b-dialog {
	background-color: #555;
	max-height: 100%;
	overflow-y: scroll;
	overflow-x: hidden;

	.ui-dialog-titlebar {
		text-transform: uppercase;
		background-color: #222;

		&-close {
			display: none;
		}
	}

	button.ui-button {
		width: 50px;
		background-color: #666;
		border-right: 1px solid #444;

		&:hover {
			background-color: #444;
		}
	}

	.ui-dialog-buttonpane {
		background-color: #666;

		.ui-icon {
			margin: 0;
			top: 10px;
			left: 10px;
		}
		.ui-button-text {
			padding: .4em;
			text-indent: -99999px;
		}
	}
	.ui-widget-content {
		background-color: #666;
	}
}

